n[project]
name = "denario"
version = "0.1.14"
description = "Modular Automation of Scientific Research with Multi-Agent Systems"
authors = [
  { name = "Pablo Villanueva-Domingo" },
  { name = "Francisco Villaescusa-Navarro"},
  { name = "Boris Bolliet"},
 
]
maintainers = [
  { name = "Denario", email = "denario.astropilot.ai@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPLv3" }
keywords = ["machine learning","agent", "biology", "chemistry", "cosmology","material sciences"]
dependencies = [
  "langchain>=0.3.23",
  "langchain-chroma>=0.2.2",
  "langchain-community>=0.3.21",
  "langchain-google-vertexai>=2.0.19",
  "langchain-groq>=0.3.2",
  "langchain-google-genai",
  "langchain-anthropic>=0.3.10",
  "langchain-openai>=0.3.12",
  "langgraph>=0.3.25",
  "google-cloud-aiplatform",
  "google-ai-generativelanguage>=0.6.17",
  "flatbuffers>=24.12.23",
  "filelock>=3.17.0",
  "cmbagent>=0.0.1post59",
  "pymupdf",
  "pillow",
  "jsonschema",
  "futurehouse-client",
  "json5",
]

[project.urls]
homepage = "https://astropilot-ai.github.io/DenarioPaperPage/"
documentation = "https://denario.readthedocs.io/en/latest/"

[project.scripts]
denario = "denario.cli:main"

[project.optional-dependencies]
app = ["denario_app"]

[dependency-groups]
dev = [
  {include-group = "docs"},
  {include-group = "app"}
]
docs = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material>=9.6.12",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-git-committers-plugin-2>=2.5.0",
]
app = [
  "streamlit",
  "streamlit_pdf_viewer",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["."]
